@@ -8,6 +8,8 @@
 * Fixed Dwoo::isArray() check, objects implementing ArrayAccess are now
   valid (thanks to Daniel Cousineau for the patch)
 * Fixed compiler warning when doing {func()->method()} or {func()->property}
+* Fixed compiled/cached files being written in the wrong place when the path
+  to the template contains "../"s
 
 [2008-08-03] 0.9.3
 + Adapters: Added the ZendFramework interface for Dwoo
